crates/pgls_pretty_print/tests/snapshots/multi/tests__collate_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/collate.sql
snapshot_kind: text
---
CREATE SCHEMA "collate_tests";

SET search_path TO collate_tests;

CREATE TABLE collate_test1 (
  a INT,
  b TEXT COLLATE "C" NOT NULL
);

CREATE TABLE collate_test_fail (
  a INT COLLATE "C",
  b TEXT
);

CREATE TABLE collate_test_like (LIKE collate_test1);

CREATE TABLE collate_test2 (
  a INT,
  b TEXT COLLATE "POSIX"
);

INSERT INTO collate_test1 VALUES (1, 'abc'), (2, 'Abc'), (3, 'bbc'), (4, 'ABD');

INSERT INTO collate_test2 SELECT * FROM collate_test1;

SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'abc';

SELECT * FROM collate_test1 WHERE b >= 'abc' COLLATE "C";

SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'abc' COLLATE "C";

SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'bbc' COLLATE "POSIX";

CREATE DOMAIN testdomain_p AS TEXT COLLATE "POSIX";

CREATE DOMAIN testdomain_i AS INT COLLATE "POSIX";

CREATE TABLE collate_test4 (
  a INT,
  b testdomain_p
);

INSERT INTO collate_test4 SELECT * FROM collate_test1;

SELECT a, b FROM collate_test4 ORDER BY b;

CREATE TABLE collate_test5 (
  a INT,
  b testdomain_p COLLATE "C"
);

INSERT INTO collate_test5 SELECT * FROM collate_test1;

SELECT a, b FROM collate_test5 ORDER BY b;

SELECT a, b FROM collate_test1 ORDER BY b;

SELECT a, b FROM collate_test2 ORDER BY b;

SELECT a, b FROM collate_test1 ORDER BY b COLLATE "C";

SELECT * FROM collate_test1 ORDER BY b;

SELECT * FROM collate_test2 ORDER BY b;

SELECT 'bbc' COLLATE "C" > 'Abc' COLLATE "C" AS "true";

SELECT 'bbc' COLLATE "POSIX" < 'Abc' COLLATE "POSIX" AS "false";

CREATE TABLE collate_test10 (
  a INT,
  x TEXT COLLATE "C",
  y TEXT COLLATE "POSIX"
);

INSERT INTO collate_test10 VALUES (1, 'hij', 'hij'), (2, 'HIJ', 'HIJ');

SELECT a, lower(x), lower(y), upper(x), upper(y), initcap(x), initcap(y) FROM collate_test10;

SELECT a, lower(x COLLATE "C"), lower(y COLLATE "C") FROM collate_test10;

SELECT a, x, y FROM collate_test10 ORDER BY lower(y), a;

CREATE VIEW collview1
AS SELECT
  *
FROM
  collate_test1
WHERE
  b COLLATE "C" >= 'bbc';

CREATE VIEW collview2
AS SELECT
  a,
  b
FROM
  collate_test1
ORDER BY b COLLATE "C";

CREATE VIEW collview3
AS SELECT
  a,
  lower((x || x) COLLATE "POSIX")
FROM
  collate_test10;

SELECT
  table_name,
  view_definition
FROM
  information_schema.views
WHERE
  table_name LIKE 'collview%'
ORDER BY 1;

SELECT a, COALESCE(b, 'foo') FROM collate_test1 ORDER BY 2;

SELECT a, COALESCE(b, 'foo') FROM collate_test2 ORDER BY 2;

SELECT a, lower(COALESCE(x, 'foo')), lower(COALESCE(y, 'foo')) FROM collate_test10;

SELECT a, b, GREATEST(b, 'CCC') FROM collate_test1 ORDER BY 3;

SELECT a, b, GREATEST(b, 'CCC') FROM collate_test2 ORDER BY 3;

SELECT a, x, y, lower(GREATEST(x, 'foo')), lower(GREATEST(y, 'foo')) FROM collate_test10;

SELECT a, NULLIF(b, 'abc') FROM collate_test1 ORDER BY 2;

SELECT a, NULLIF(b, 'abc') FROM collate_test2 ORDER BY 2;

SELECT a, lower(NULLIF(x, 'foo')), lower(NULLIF(y, 'foo')) FROM collate_test10;

SELECT a, CASE b WHEN 'abc' THEN 'abcd' ELSE b END FROM collate_test1 ORDER BY 2;

SELECT a, CASE b WHEN 'abc' THEN 'abcd' ELSE b END FROM collate_test2 ORDER BY 2;

CREATE DOMAIN testdomain AS TEXT;

SELECT a, CAST(b AS testdomain) FROM collate_test1 ORDER BY 2;

SELECT a, CAST(b AS testdomain) FROM collate_test2 ORDER BY 2;

SELECT a, CAST(b AS testdomain_p) FROM collate_test2 ORDER BY 2;

SELECT a, lower(CAST(x AS testdomain)), lower(CAST(y AS testdomain)) FROM collate_test10;

SELECT MIN(b), MAX(b) FROM collate_test1;

SELECT MIN(b), MAX(b) FROM collate_test2;

SELECT array_agg(b ORDER BY b) FROM collate_test1;

SELECT array_agg(b ORDER BY b) FROM collate_test2;

SELECT string_agg(x COLLATE "C", y COLLATE "POSIX") FROM collate_test10;

SELECT array_agg(x COLLATE "C" ORDER BY y COLLATE "POSIX") FROM collate_test10;

SELECT array_agg(a ORDER BY x COLLATE "C", y COLLATE "POSIX") FROM collate_test10;

SELECT array_agg(a ORDER BY x || y) FROM collate_test10;

SELECT a, b FROM collate_test1 UNION ALL SELECT a, b FROM collate_test1 ORDER BY 2;

SELECT a, b FROM collate_test2 UNION SELECT a, b FROM collate_test2 ORDER BY 2;

SELECT a, b FROM collate_test2 WHERE a > 1 ORDER BY 2;

SELECT a, b FROM collate_test2 EXCEPT SELECT a, b FROM collate_test2 WHERE a < 2 ORDER BY 2;

SELECT a, b FROM collate_test1 UNION ALL SELECT a, b FROM collate_test2 ORDER BY 2;

SELECT a, b FROM collate_test1 UNION ALL SELECT a, b FROM collate_test2;

SELECT a, b FROM collate_test1 UNION SELECT a, b FROM collate_test2 ORDER BY 2;

SELECT a, b COLLATE "C" FROM collate_test1 UNION SELECT a, b FROM collate_test2 ORDER BY 2;

SELECT a, b FROM collate_test2 ORDER BY 2;

SELECT a, b FROM collate_test1 EXCEPT SELECT a, b FROM collate_test2 ORDER BY 2;

CREATE TABLE test_u AS SELECT a, b FROM collate_test1 UNION ALL SELECT a, b FROM collate_test2;

SELECT x < y FROM collate_test10;

SELECT x || y FROM collate_test10;

SELECT x, y FROM collate_test10 ORDER BY x || y;

WITH RECURSIVE
foo (x)
AS (
  SELECT
    x
  FROM
    (VALUES ('a' COLLATE "C"), ('b')) AS t (x)
  UNION ALL
  SELECT
    (x || 'c') COLLATE "POSIX"
  FROM
    foo
  WHERE
    length(x) < 10
)
SELECT
  *
FROM
  foo;

SELECT a, b, a < b AS lt FROM (VALUES ('a', 'B'), ('A', 'b' COLLATE "C")) AS v (a, b);

SELECT * FROM collate_test10 WHERE NOT (x, y) IN (SELECT y, x FROM collate_test10);

SELECT
  *
FROM
  collate_test10
WHERE
  NOT (x COLLATE "POSIX", y COLLATE "C") IN
  (
    SELECT y, x FROM collate_test10
  );

SELECT
  *
FROM
  collate_test10
WHERE
  NOT (x, y) IN
  (
    SELECT
      y COLLATE "C",
      x COLLATE "POSIX"
    FROM
      collate_test10
  );

SELECT a, CAST(b AS VARCHAR) FROM collate_test1 ORDER BY 2;

SELECT a, CAST(b AS VARCHAR) FROM collate_test2 ORDER BY 2;

CREATE FUNCTION vc(TEXT)
RETURNS TEXT
LANGUAGE "sql"
AS 'select $1::varchar';

SELECT a, b FROM collate_test1 ORDER BY a, vc(b);

SELECT * FROM unnest((SELECT array_agg(b ORDER BY b) FROM collate_test1)) ORDER BY 1;

SELECT * FROM unnest((SELECT array_agg(b ORDER BY b) FROM collate_test2)) ORDER BY 1;

CREATE FUNCTION dup(ANYELEMENT)
RETURNS ANYELEMENT
AS 'select $1'
LANGUAGE "sql";

SELECT a, dup(b) FROM collate_test1 ORDER BY 2;

SELECT a, dup(b) FROM collate_test2 ORDER BY 2;

CREATE INDEX "collate_test1_idx1" ON collate_test1 USING btree (b);

CREATE INDEX "collate_test1_idx2" ON collate_test1 USING btree (b COLLATE "POSIX");

CREATE INDEX "collate_test1_idx3" ON collate_test1 USING btree ((b COLLATE "POSIX"));

CREATE INDEX "collate_test1_idx4" ON collate_test1 USING btree (((b || 'foo') COLLATE "POSIX"));

CREATE INDEX "collate_test1_idx5" ON collate_test1 USING btree (a COLLATE "POSIX");

CREATE INDEX "collate_test1_idx6" ON collate_test1 USING btree ((a COLLATE "POSIX"));

SELECT
  relname,
  pg_get_indexdef(oid)
FROM
  pg_class
WHERE
  relname LIKE 'collate_test%_idx%'
ORDER BY 1;

SET enable_seqscan = 0;

SET enable_hashjoin = 0;

SET enable_nestloop = 0;

CREATE TABLE collate_test20 (f1 TEXT COLLATE "C" PRIMARY KEY);

INSERT INTO collate_test20 VALUES ('foo'), ('bar');

CREATE TABLE collate_test21 (f2 TEXT COLLATE "POSIX" REFERENCES collate_test20);

INSERT INTO collate_test21 VALUES ('foo'), ('bar');

INSERT INTO collate_test21 VALUES ('baz');

CREATE TABLE collate_test22 (f2 TEXT COLLATE "POSIX");

INSERT INTO collate_test22 VALUES ('foo'), ('bar'), ('baz');

ALTER TABLE collate_test22
  ADD FOREIGN KEY (f2) REFERENCES collate_test20;

DELETE FROM collate_test22 WHERE f2 = 'baz';

ALTER TABLE collate_test22
  ADD FOREIGN KEY (f2) REFERENCES collate_test20;

RESET enable_seqscan;

RESET enable_hashjoin;

RESET enable_nestloop;

SELECT * FROM collate_test10 ORDER BY x, y;

SELECT * FROM collate_test10 ORDER BY x DESC, y COLLATE "C" ASC NULLS FIRST;

CREATE COLLATION builtin_c (provider = builtin, locale = "C");

SELECT b FROM collate_test1 ORDER BY b COLLATE "builtin_c";

CREATE COLLATION builtin2 (provider = builtin);

CREATE COLLATION builtin2 (provider = builtin, locale = "en_US");

CREATE COLLATION builtin2 (provider = builtin, lc_ctype = "C", lc_collate = "C");

CREATE COLLATION mycoll1 FROM "C";

CREATE COLLATION mycoll2 (lc_collate = "POSIX", lc_ctype = "POSIX");

CREATE COLLATION mycoll3 FROM "default";

DROP COLLATION "mycoll1";

CREATE TABLE collate_test23 (f1 TEXT COLLATE "mycoll2");

DROP COLLATION "mycoll2";

CREATE COLLATION case_coll ("Lc_Collate" = "POSIX", "Lc_Ctype" = "POSIX");

CREATE TEMPORARY TABLE vctable (f1 VARCHAR(25));

INSERT INTO vctable VALUES ('foo' COLLATE "C");

SELECT pg_collation_for('foo');

SELECT pg_collation_for(CAST('foo' AS TEXT));

SELECT pg_collation_for((SELECT a FROM collate_test1 LIMIT 1));

SELECT pg_collation_for((SELECT b FROM collate_test1 LIMIT 1));

CREATE VIEW collate_on_int
AS SELECT
  c1 + 1 AS c1p
FROM
  (SELECT CAST('4' COLLATE "C" AS INT) AS c1) AS ss;

CREATE COLLATION coll_dup_chk (lc_collate = "POSIX", lc_collate = "NONSENSE", lc_ctype = "POSIX");

CREATE COLLATION coll_dup_chk (lc_ctype = "POSIX", lc_ctype = "NONSENSE", lc_collate = "POSIX");

CREATE COLLATION coll_dup_chk (
  provider = icu,
  provider = nonsense,
  lc_collate = "POSIX",
  lc_ctype = "POSIX"
);

CREATE COLLATION case_sensitive (locale = '', locale = "NONSENSE");

CREATE COLLATION coll_dup_chk (deterministic = 'true', deterministic = nonsense, locale = '');

CREATE COLLATION coll_dup_chk (version = '1', version = "NONSENSE", locale = '');

CREATE COLLATION coll_dup_chk (lc_collate = "POSIX", lc_ctype = "POSIX", locale = '');

CREATE COLLATION coll_dup_chk (lc_collate = "POSIX", locale = '');

CREATE COLLATION coll_dup_chk (lc_ctype = "POSIX", locale = '');

CREATE COLLATION coll_dup_chk ("from" = "C", version = "1");

DROP SCHEMA collate_tests CASCADE;
